--- a/signup-info/signup.css
+++ b/signup-info/signup.css
@@ -1,57 +1,134 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    background-color: #AFD4FF;
+body {
+  background-color: #afd4ff;
+}
+nav {
+  text-transform: uppercase;
+  font-weight: 400;
+  letter-spacing: 2px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 5px 40px;
+  background-color: transparent;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-img{
-    position: absolute;
-top: 7rem;
-right: 10rem;
-height: 70vh;
-
+nav .logo img {
+  width: 12rem;
+  height: auto;
+  padding: 2px;
 }
 
-a{
-    text-decoration: none;
+nav .logo img:hover {
+  opacity: 0.7;
 }
 
-.form-info{
-    width: 20rem;
-    position: absolute;
-    top: 7rem;
-    left: 5rem;
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.menu li {
+  list-style: none;
+  margin: 0 1rem;
 }
 
-form input{
-    width: 50%;
-    padding: 10px 5px;
-    margin: 5px 0;
-    border: 0;
-    border-bottom: 1px solid #999;
-    outline: none;
-    background: transparent;
+.menu li a {
+  color: #000;
+  font-size: 0.8rem;
+  text-decoration: none;
 }
 
-.btn-box{
-    width: 100%;
-    margin: 30px auto;
-    text-align: center;
+.menu li a:hover {
+  color: #fff;
+  font-weight: bold;
+  transition: all ease 0.2s;
+}
+
+.search_box {
+  position: relative;
+  width: 65px;
+  height: 40px;
+  line-height: 2.5rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  transition: 0.5s;
+  border-radius: 2rem;
+  padding: 0 1rem;
+}
+
+.search_box input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+  color: #555;
+  font-size: 1.1rem;
+  background-color: transparent;
+}
+
+.search_box:hover {
+  background-color: white;
+  width: 500px;
+}
+
+i {
+  font-size: 1em;
+  cursor: pointer;
+}
+img {
+  position: absolute;
+  top: 7rem;
+  right: 10rem;
+  height: 70vh;
+}
+
+a {
+  text-decoration: none;
+}
+
+.form-info {
+  width: 20rem;
+  position: absolute;
+  top: 7rem;
+  left: 5rem;
+}
+
+form input {
+  width: 50%;
+  padding: 10px 5px;
+  margin: 5px 0;
+  border: 0;
+  border-bottom: 1px solid #999;
+  outline: none;
+  background: transparent;
+}
+
+.btn-box {
+  width: 100%;
+  margin: 30px auto;
+  text-align: center;
 }
 
 .signup-btn {
-    width: 7rem;
-    height: 2rem;
-    margin: 0 1rem;
-    background: linear-gradient(to right, #92c8f7, #1474E4);
-    border-radius: 1.5rem;
-    border: 0;
-    outline: none;
-    color: #fff;
-    cursor: pointer;
+  width: 7rem;
+  height: 2rem;
+  margin: 0 1rem;
+  background: linear-gradient(to right, #92c8f7, #1474e4);
+  border-radius: 1.5rem;
+  border: 0;
+  outline: none;
+  color: #fff;
+  cursor: pointer;
 }
-
