ft(project design): signup and login validation
* create fuctions to validate the elements for the signup and login form

--- a/signup-info/signup.css
+++ b/signup-info/signup.css
@@ -115,6 +115,14 @@ form input {
   background: transparent;
 }
 
+.error-msg{
+  color:red;
+  text-align: center;
+  font-size: 12px;
+  padding-bottom: 20px;
+
+}
+
 .btn-box {
   width: 100%;
   margin: 30px auto;
