--- a/styles.css
+++ b/styles.css
@@ -138,31 +138,61 @@ i {
   color: #fff;
 }
 
-.login_form {
-  position: relative;
-  display:flex;
+.login{
+  width: 100%;
+  height: 100vh;
+  display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  border: 1px solid black;
-
-  /* align-content: center;
-  line-height: 2rem; */
-  /* width: 20rem;
-  height: 20rem;
-  margin: 5px 10px; */
-  /* background: #7076fe;
-  position: absolute;
-  transform: translate(-50%, -50%); */
+  padding: 1rem;
 }
-/* .login_info {
-  width: 20rem;
-  height: 20rem;
-  background: #ffffff;
-  border: 1px solid black;
-  top: 45%;
-  left: 45%;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  padding: 70px 30px;
-} */
+
+.login-info {
+line-height: 3rem;
+padding: 1rem;
+border: 1px solid black;
+}
+
+.login-info h1{
+  font-size: 1.2rem;
+  text-align: center;
+}
+.login-info h4{
+  text-align: center;
+  font-size: 1rem;
+}
+.login-info input{
+  width: 50%;
+  padding: 5px 5px;
+  margin: 5px 0;
+  border: 0;
+  border-bottom: 1px solid #999;
+  outline: none;
+}
+
+.login-info button{
+  width: 5rem;
+  height: 2rem;
+  margin: 0 1rem;
+  background: linear-gradient(to right, #92c8f7, #1474e4);
+  border-radius: 1.5rem;
+  border: 0;
+  outline: none;
+  color: #fff;
+  cursor: pointer;
+}
+
+.login-info .error-msg{
+  color:red;
+  text-align: justify;
+  font-size: 0.6em;
+}
+
+.login-info .psw{
+  font-size: 0.7rem;
+  line-height: normal;
+}
+
+.login a{
+  text-decoration: none;
+}
