--- a/dev-project/resources/css/styles.css
+++ b/dev-project/resources/css/styles.css
@@ -7,7 +7,7 @@
 body {
   font-family: "Poppins", sans-serif;
   width: 100%;
-  background: url("images/background-image.png");
+  background: url("../images/background-image.png");
   background-position: right bottom;
   background-size: cover;
   background-repeat: no-repeat;
@@ -138,61 +138,3 @@ i {
   color: #fff;
 }
 
-.login{
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 1rem;
-}
-
-.login-info {
-line-height: 3rem;
-padding: 1rem;
-border: 1px solid black;
-}
-
-.login-info h1{
-  font-size: 1.2rem;
-  text-align: center;
-}
-.login-info h4{
-  text-align: center;
-  font-size: 1rem;
-}
-.login-info input{
-  width: 50%;
-  padding: 5px 5px;
-  margin: 5px 0;
-  border: 0;
-  border-bottom: 1px solid #999;
-  outline: none;
-}
-
-.login-info button{
-  width: 5rem;
-  height: 2rem;
-  margin: 0 1rem;
-  background: linear-gradient(to right, #92c8f7, #1474e4);
-  border-radius: 1.5rem;
-  border: 0;
-  outline: none;
-  color: #fff;
-  cursor: pointer;
-}
-
-.login-info .error-msg{
-  color:red;
-  text-align: justify;
-  font-size: 0.6em;
-}
-
-.login-info .psw{
-  font-size: 0.7rem;
-  line-height: normal;
-}
-
-.login a{
-  text-decoration: none;
-}
