--- a/dev-project/resources/css/question-form.css
+++ b/dev-project/resources/css/question-form.css
@@ -7,6 +7,9 @@
   body {
     font-family: "Poppins", sans-serif;
     width: 100%;
+    background-position: right bottom;
+    background-size: cover;
+    background-repeat: no-repeat;
     height: 100vh;
   }
   
@@ -92,68 +95,24 @@
     cursor: pointer;
   }
 
-  .sidenav {
-    height: 100vh;
-    margin-top: 3.75rem;
-    width: 10rem;
-    position: fixed;
-    z-index: 1000;
-    top: 0;
-    left: 0;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items:flex-start;
-    padding: 0.5rem;
-    border: 1px solid black;
+  .form-data{
+      display: flex;
+      justify-content: center;
+      flex-direction:column;
+      position: relative;
+      padding: 1rem;
+      width: 100%;
+      height: 100vh;
   }
+
+  .form-data input{
+      width: 50%;
+  }
+
+  .error-msg{
+    color:red;
+    text-align: justify;
+    font-size: 12px;
+    padding-bottom: 20px;
   
-  .sidenav a {
-    padding: 32px;
-    text-decoration: none;
-    font-size: 1rem;
-    color: black;
-    display: block;
   }
-  
-  .sidenav a:hover {
-    color: #f1f1f1;
-  }
-
-  .main{
-    height: 100vh;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column-reverse;
-  }
-
-
-  #questions{
-    color: grey;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 1rem;
-    max-width: 50rem;
-    margin: 0 auto;
-  }
-
-  /* .btn button {
-    width: 160px;
-    height: 40px;
-    background-color: #7076fe;
-    border: none;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 20px;
-    font-size: 18px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 0.4s ease;
-  }
-  
-  .btn button:hover{
-    background-color: #000;
-    color: #fff;
-  } */
