--- a/dev-project/resources/css/question.css
+++ b/dev-project/resources/css/question.css
@@ -1,118 +1,145 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-  }
-  
-  body {
-    font-family: "Poppins", sans-serif;
-    width: 100%;
-    background-position: right bottom;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100vh;
-  }
-  
-  nav {
-    text-transform: uppercase;
-    font-weight: 400;
-    letter-spacing: 2px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 5px 40px;
-    background-color: transparent;
-    z-index: 1000;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: 1px solid black;
-  }
-  
-  nav .logo img {
-    width: 12rem;
-    height: auto;
-    padding: 2px;
-  }
-  
-  nav .logo img:hover {
-    opacity: 0.7;
-  }
-  
-  .menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .menu li {
-    list-style: none;
-    margin: 0 1rem;
-  }
-  
-  .menu li a {
-    color: #000;
-    font-size: 0.8rem;
-    text-decoration: none;
-  }
-  
-  .menu li a:hover {
-    color: #fff;
-    font-weight: bold;
-    transition: all ease 0.2s;
-  }
-  
-  .search_box {
-    position: relative;
-    width: 65px;
-    height: 40px;
-    line-height: 2.5rem;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    transition: 0.5s;
-    border-radius: 2rem;
-    padding: 0 1rem;
-  }
-  
-  .search_box input {
-    width: 100%;
-    height: 100%;
-    border: none;
-    outline: none;
-    color: #555;
-    font-size: 1.1rem;
-    background-color: transparent;
-  }
-  
-  .search_box:hover {
-    background-color: white;
-    width: 500px;
-  }
-  
-  i {
-    font-size: 1em;
-    cursor: pointer;
-  }
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 
-  .form-data{
-      display: flex;
-      justify-content: center;
-      flex-direction:column;
-      position: relative;
-      padding: 1rem;
-      width: 100%;
-      height: 100vh;
-  }
+body {
+  font-family: "Poppins", sans-serif;
+  width: 100%;
+  height: 100vh;
+}
 
-  .form-data input{
-      width: 50%;
-  }
+nav {
+  text-transform: uppercase;
+  font-weight: 400;
+  letter-spacing: 2px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 5px 40px;
+  background-color: transparent;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid black;
+}
 
-  .error-msg{
-    color:red;
-    text-align: justify;
-    font-size: 12px;
-    padding-bottom: 20px;
-  
-  }
+nav .logo img {
+  width: 12rem;
+  height: auto;
+  padding: 2px;
+}
+
+nav .logo img:hover {
+  opacity: 0.7;
+}
+
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.menu li {
+  list-style: none;
+  margin: 0 1rem;
+}
+
+.menu li a {
+  color: #000;
+  font-size: 0.8rem;
+  text-decoration: none;
+}
+
+.menu li a:hover {
+  color: #fff;
+  font-weight: bold;
+  transition: all ease 0.2s;
+}
+
+.search_box {
+  position: relative;
+  width: 65px;
+  height: 40px;
+  line-height: 2.5rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  transition: 0.5s;
+  border-radius: 2rem;
+  padding: 0 1rem;
+}
+
+.search_box input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+  color: #555;
+  font-size: 1.1rem;
+  background-color: transparent;
+}
+
+.search_box:hover {
+  background-color: white;
+  width: 500px;
+}
+
+i {
+  font-size: 1em;
+  cursor: pointer;
+}
+
+.sidenav {
+  height: 100vh;
+  margin-top: 3.75rem;
+  width: 10rem;
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0.5rem;
+  border: 1px solid black;
+}
+
+.sidenav a {
+  padding: 32px;
+  text-decoration: none;
+  font-size: 1rem;
+  color: black;
+  display: block;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.main {
+  height: 100vh;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column-reverse;
+}
+#question {
+  border-bottom: 1px solid #555;
+  padding: 1rem;
+}
+
+#answer {
+  padding-top: 1rem;
+  color: grey;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 1rem;
+  max-width: 50rem;
+  margin: 0 auto;
+  display: list-item;
+}
