--- a/dev-project/resources/css/main.css
+++ b/dev-project/resources/css/main.css
@@ -10,11 +10,12 @@
     height: 100vh;
   }
   
+
   nav {
     text-transform: uppercase;
     font-weight: 400;
     letter-spacing: 2px;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
@@ -54,7 +55,7 @@
   }
   
   .menu li a:hover {
-    color: #fff;
+    color: rgb(0, 0, 0);
     font-weight: bold;
     transition: all ease 0.2s;
   }
@@ -112,48 +113,58 @@
     padding: 32px;
     text-decoration: none;
     font-size: 1rem;
-    color: black;
+    color: grey;
     display: block;
   }
   
   .sidenav a:hover {
-    color: #f1f1f1;
+    color: black;
   }
 
-  .main{
-    height: 100vh;
-    position: relative;
+  .info{
+    width: 100%;
     display: flex;
-    justify-content: center;
+    text-decoration: none;
     align-items: center;
-    flex-direction: column-reverse;
+    justify-content: space-around;
   }
 
-
-  #questions{
-    color: grey;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 1rem;
-    max-width: 50rem;
-    margin: 0 auto;
+  .header{
+    font-size: 1rem;
+    font-weight: 500;
+    border-bottom:1px solid #555;
   }
 
-  /* .btn button {
+  .btn button {
     width: 160px;
     height: 40px;
-    background-color: #7076fe;
+    background-color: #709ffe;
     border: none;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 20px;
-    font-size: 18px;
+    font-size: 1rem;
     border-radius: 10px;
     cursor: pointer;
     transition: 0.4s ease;
+
   }
   
   .btn button:hover{
     background-color: #000;
     color: #fff;
-  } */
+  }
+
+  .qs-info{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column-reverse;
+    width: 50rem;
+    left: 10rem;
+  }
+
+
+  .questions{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 2rem;
+  }
+
