--- a/dev-project/resources/css/signup.css
+++ b/dev-project/resources/css/signup.css
@@ -1,12 +1,16 @@
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-  background-color: #afd4ff;
+  font-family: "Poppins", sans-serif;
+  width: 100%;
+  background-color: #f7fbff;
+  height: 100vh;
 }
+
 nav {
   text-transform: uppercase;
   font-weight: 400;
@@ -50,7 +54,7 @@ nav .logo img:hover {
 }
 
 .menu li a:hover {
-  color: #fff;
+  color: rgb(0, 0, 0);
   font-weight: bold;
   transition: all ease 0.2s;
 }
@@ -88,58 +92,67 @@ i {
   cursor: pointer;
 }
 
-#img {
-  position: absolute;
-  top: 7rem;
-  right: 10rem;
-  height: 70vh;
-}
-
-a {
-  text-decoration: none;
-}
-
-.form-info {
-  width: 20rem;
-  position: absolute;
-  top: 7rem;
-  left: 5rem;
-  padding: 0.5rem;
-  border: 1px solid rgba(143, 154, 255, 0.785);
-}
-
-form input {
-  width: 50%;
-  padding: 10px 5px;
-  margin: 5px 0;
-  border: 0;
-  border-bottom: 1px solid #999;
-  outline: none;
-  background: transparent;
-}
-
-.error-msg{
-  color:red;
-  text-align: center;
-  font-size: 12px;
-  padding-bottom: 20px;
-
-}
-
-.btn-box {
+.signup-info {
   width: 100%;
-  margin: 30px auto;
+  height: 100vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.signup-info #signup-form {
+  line-height: 3rem;
+  width: 20rem;
+  height: 30rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 5px 10px 18px rgb(255, 123, 0);
+}
+
+.signup-info #signup-form h1 {
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+#signup-form label {
+  font-weight: 500;
+  font-size: 0.8rem;
+}
+
+#signup-form .error-msg {
+  color: red;
+  text-align: justify;
+  font-size: 0.6em;
+line-height: 0;}
+
+.signup-info #signup-form .btn-box {
   text-align: center;
 }
 
-.signup-btn {
-  width: 7rem;
-  height: 2rem;
-  margin: 0 1rem;
-  background: linear-gradient(to right, #92c8f7, #1474e4);
-  border-radius: 1.5rem;
-  border: 0;
-  outline: none;
-  color: #fff;
+#signup-btn {
+  background-color: white;
+  padding: 0.5rem;
+  border: 1px solid black;
+  border-radius: 0.5rem;
+}
+
+#signup-btn:hover {
+  background-color: rgb(255, 123, 0);
   cursor: pointer;
+}
+
+.signup-info #signup-form p {
+  font-size: 0.6rem;
+}
+
+.signup-img {
+  width: 40%;
+  height: auto;
+  right: 0.5rem;
+}
+
+.signup-info .signup-img img {
+  width: 100%;
+  height: auto;
 }
