feature(project design): login page
* added access token to localhost
* modify the design

--- a/dev-project/resources/css/login.css
+++ b/dev-project/resources/css/login.css
@@ -1,109 +1,117 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  width: 100%;
+  background-color: #f7fbff;
+  height: 100vh;
 }
 
 nav {
-    text-transform: uppercase;
-    font-weight: 400;
-    letter-spacing: 2px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 5px 40px;
-    background-color: transparent;
-    z-index: 1000;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  nav .logo img {
-    width: 12rem;
-    height: auto;
-    padding: 2px;
-  }
-  
-  nav .logo img:hover {
-    opacity: 0.7;
-  }
-  
-  .menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .menu li {
-    list-style: none;
-    margin: 0 1rem;
-  }
-  
-  .menu li a {
-    color: #000;
-    font-size: 0.8rem;
-    text-decoration: none;
-  }
-  
-  .menu li a:hover {
-    color: #fff;
-    font-weight: bold;
-    transition: all ease 0.2s;
-  }
-  
-  .search_box {
-    position: relative;
-    width: 65px;
-    height: 40px;
-    line-height: 2.5rem;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    transition: 0.5s;
-    border-radius: 2rem;
-    padding: 0 1rem;
-  }
-  
-  .search_box input {
-    width: 100%;
-    height: 100%;
-    border: none;
-    outline: none;
-    color: #555;
-    font-size: 1.1rem;
-    background-color: transparent;
-  }
-  
-  .search_box:hover {
-    background-color: white;
-    width: 500px;
-  }
-  
-  i {
-    font-size: 1em;
-    cursor: pointer;
-  }
+  text-transform: uppercase;
+  font-weight: 400;
+  letter-spacing: 2px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 5px 40px;
+  background-color: transparent;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav .logo img {
+  width: 12rem;
+  height: auto;
+  padding: 2px;
+}
+
+nav .logo img:hover {
+  opacity: 0.7;
+}
+
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.menu li {
+  list-style: none;
+  margin: 0 1rem;
+}
+
+.menu li a {
+  color: #000;
+  font-size: 0.8rem;
+  text-decoration: none;
+}
+
+.menu li a:hover {
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  transition: all ease 0.2s;
+}
+
+.search_box {
+  position: relative;
+  width: 65px;
+  height: 40px;
+  line-height: 2.5rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  transition: 0.5s;
+  border-radius: 2rem;
+  padding: 0 1rem;
+}
+
+.search_box input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+  color: #555;
+  font-size: 1.1rem;
+  background-color: transparent;
+}
+
+.search_box:hover {
+  background-color: white;
+  width: 500px;
+}
+
+i {
+  font-size: 1em;
+  cursor: pointer;
+}
+
 .login{
     width: 100%;
     height: 100vh;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    padding: 1rem;
   }
   
-
   .login-info {
   line-height: 3rem;
   width: 20rem;
-  height: 20rem;
+  height: 23rem;
   padding: 1rem;
-  border: 1px solid black;
+  border-radius: 0.5rem;
+  box-shadow: 5px 10px 18px rgb(255, 123, 0);
   }
   
   .login-info label{
-    text-align: left;
+    font-weight: 500;
+    font-size: 0.8rem;
   }
 
   .login-info input{
@@ -126,16 +134,25 @@ nav {
     border-bottom: 1px solid #999;
     outline: none;
   }
-  
+
+  #login-form .error-msg {
+    color: red;
+    text-align: justify;
+    font-size: 0.6em;
+    line-height: 0;
+  }
+  .login #login-form .btn-box{
+    text-align: justify;
+  }
   .login-info button{
-    width: 5rem;
-    height: 2rem;
-    margin: 0 1rem;
-    background: linear-gradient(to right, #92c8f7, #1474e4);
-    border-radius: 1.5rem;
-    border: 0;
-    outline: none;
-    color: #fff;
+    background-color: white;
+    padding: 0.5rem;
+    border: 1px solid black;
+    border-radius: 0.5rem;
+  }
+
+  #login-btn:hover{
+    background-color: rgb(255, 153, 0);
     cursor: pointer;
   }
   
@@ -145,11 +162,23 @@ nav {
     font-size: 0.6em;
   }
   
-  .login-info .psw{
-    font-size: 0.7rem;
-    line-height: normal;
-  }
+.login #login-form p{
+  font-size: 0.6rem;
+  line-height: 2rem;
+}
   
   .login a{
     text-decoration: none;
   }
+
+.login-img {
+    width: 30rem;
+    height: 30rem;
+    right: 0.5rem;
+  }
+
+.login .login-img img{
+  width: 100%;
+  height: auto;
+}
+  
