--- a/dev-project/resources/css/questions.css
+++ b/dev-project/resources/css/questions.css
@@ -1,170 +1,166 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-  }
-  
-  body {
-    font-family: "Poppins", sans-serif;
-    width: 100%;
-    height: 100vh;
-  }
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  nav {
-    text-transform: uppercase;
-    font-weight: 400;
-    letter-spacing: 2px;
-    position: sticky;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 5px 40px;
-    background-color: transparent;
-    z-index: 1000;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: 1px solid black;
-  }
-  
-  nav .logo img {
-    width: 12rem;
-    height: auto;
-    padding: 2px;
-  }
-  
-  nav .logo img:hover {
-    opacity: 0.7;
-  }
-  
-  .menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .menu li {
-    list-style: none;
-    margin: 0 1rem;
-  }
-  
-  .menu li a {
-    color: #000;
-    font-size: 0.8rem;
-    text-decoration: none;
-  }
-  
-  .menu li a:hover {
-    color: rgb(0, 0, 0);
-    font-weight: bold;
-    transition: all ease 0.2s;
-  }
-  
-  .search_box {
-    position: relative;
-    width: 65px;
-    height: 40px;
-    line-height: 2.5rem;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    transition: 0.5s;
-    border-radius: 2rem;
-    padding: 0 1rem;
-  }
-  
-  .search_box input {
-    width: 100%;
-    height: 100%;
-    border: none;
-    outline: none;
-    color: #555;
-    font-size: 1.1rem;
-    background-color: transparent;
-  }
-  
-  .search_box:hover {
-    background-color: white;
-    width: 500px;
-  }
-  
-  i {
-    font-size: 1em;
-    cursor: pointer;
-  }
+nav {
+  text-transform: uppercase;
+  font-weight: 400;
+  letter-spacing: 2px;
+  position: sticky;
+  height: 3rem;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 5px 40px;
+  background-color: transparent;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid black;
+}
 
-  .sidenav {
-    height: 100vh;
-    margin-top: 3.75rem;
-    width: 10rem;
-    position: fixed;
-    z-index: 1000;
-    top: 0;
-    left: 0;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items:flex-start;
-    padding: 0.5rem;
-    border: 1px solid black;
-  }
-  
-  .sidenav a {
-    padding: 32px;
-    text-decoration: none;
-    font-size: 1rem;
-    color: grey;
-    display: block;
-  }
-  
-  .sidenav a:hover {
-    color: black;
-  }
+nav .logo img {
+  width: 12rem;
+  height: auto;
+  padding: 2px;
+}
 
-  .info{
-    width: 100%;
-    display: flex;
-    text-decoration: none;
-    align-items: center;
-    justify-content: space-around;
-  }
+nav .logo img:hover {
+  opacity: 0.7;
+}
 
-  .header{
-    font-size: 1rem;
-    font-weight: 500;
-    border-bottom:1px solid #555;
-  }
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.menu li {
+  list-style: none;
+  margin: 0 1rem;
+}
 
-  .btn button {
-    width: 160px;
-    height: 40px;
-    background-color: #709ffe;
-    border: none;
-    font-size: 1rem;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 0.4s ease;
+.menu li a {
+  color: #000;
+  font-size: 0.8rem;
+  text-decoration: none;
+}
 
-  }
-  
-  .btn button:hover{
-    background-color: #000;
-    color: #fff;
-  }
+.menu li a:hover {
+  color: #fff;
+  font-weight: bold;
+  transition: all ease 0.2s;
+}
 
-  .qs-info{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column-reverse;
-    width: 50rem;
-    left: 10rem;
-  }
+.search_box {
+  position: relative;
+  width: 65px;
+  height: 40px;
+  line-height: 2.5rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  transition: 0.5s;
+  border-radius: 2rem;
+  padding: 0 1rem;
+}
 
+.search_box input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+  color: #555;
+  font-size: 1.1rem;
+  background-color: transparent;
+}
 
-  .questions{
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 2rem;
-  }
+.search_box:hover {
+  background-color: white;
+  width: 500px;
+}
 
+i {
+  font-size: 1em;
+  cursor: pointer;
+}
+
+.details {
+  width: 100%;
+  height: calc(100vh - 3rem);
+  display: flex;
+}
+
+.details .sidenav {
+  width: 10rem;
+  background-color: rgb(229, 229, 229);
+  position: sticky;
+}
+
+.sidenav a {
+  text-decoration: none;
+  font-size: 1rem;
+  line-height: 3rem;
+  display: list-item;
+  padding: 1rem;
+  letter-spacing: 0.1rem;
+  border-bottom: 1px solid black;
+  text-align: center;
+
+}
+
+.nav a:hover {
+  background-color: rgb(171, 170, 170);
+  transition: 0.5s;
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+}
+
+p {
+  font-weight: 600;
+  font-size: 1.1rem;
+  letter-spacing: 1px;
+}
+
+.btn {
+  border: none;
+}
+/* .right-nav {
+  width: 10rem;
+  text-align: right;
+  background-color: rgb(229, 229, 229);
+} */
+
+.question-grid {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 1rem;
+  width: 100%;
+}
+
+.question-grid .questions {
+  border: 1px solid lightgray;
+  border-radius: 0.5rem;
+  padding: 1rem 2rem;
+  background-color: #fdf7e2;
+}
+
+.question-grid .questions:first-child{
+  display: none;
+}
+
+h1{
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.question-grid .questions p{
+  font-size: 1rem;
+  font-weight: 400;
+}
