--- a/css/login.css
+++ b/css/login.css
@@ -19,18 +19,19 @@ nav {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 5px 40px;
-  background-color: transparent;
+  padding-left: 0.5rem;
   z-index: 1000;
   display: flex;
   justify-content: space-between;
   align-items: center;
+
 }
 
 nav .logo img {
   width: 12rem;
   height: auto;
-  padding: 2px;
+  padding-top: 0.8rem;
+
 }
 
 nav .logo img:hover {
@@ -91,94 +92,94 @@ i {
   font-size: 1em;
   cursor: pointer;
 }
+.login {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
 
-.login{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-  }
-  
-  .login-info {
+.login-info {
   line-height: 3rem;
   width: 20rem;
   height: 23rem;
   padding: 1rem;
   border-radius: 0.5rem;
   box-shadow: 5px 10px 18px rgb(255, 123, 0);
-  }
-  
-  .login-info label{
-    font-weight: 500;
-    font-size: 0.8rem;
-  }
+}
 
-  .login-info input{
-    display: inline-block;
-  }
+.login-info label {
+  font-weight: 500;
+  font-size: 0.8rem;
+}
 
-  .login-info h1{
-    font-size: 1.2rem;
-    text-align: center;
-  }
-  .login-info h4{
-    text-align: center;
-    font-size: 1rem;
-  }
-  .login-info input{
-    width: 60%;
-    padding: 5px 5px;
-    margin: 5px 0;
-    border: 0;
-    border-bottom: 1px solid #999;
-    outline: none;
-  }
+.login-info input {
+  display: inline-block;
+}
 
-  #login-form .error-msg {
-    color: red;
-    text-align: justify;
-    font-size: 0.6em;
-    line-height: 0;
-  }
-  .login #login-form .btn-box{
-    text-align: justify;
-  }
-  .login-info button{
-    background-color: white;
-    padding: 0.5rem;
-    border: 1px solid black;
-    border-radius: 0.5rem;
-  }
+.login-info h1 {
+  font-size: 1.2rem;
+  text-align: center;
+}
+.login-info h4 {
+  text-align: center;
+  font-size: 1rem;
+}
+.login-info input {
+  width: 60%;
+  padding: 5px 5px;
+  margin: 5px 0;
+  border: 0;
+  border-bottom: 1px solid #999;
+  outline: none;
+}
 
-  #login-btn:hover{
-    background-color: rgb(255, 153, 0);
-    cursor: pointer;
-  }
-  
-  .login-info .error-msg{
-    color:red;
-    text-align: justify;
-    font-size: 0.6em;
-  }
-  
-.login #login-form p{
+#login-form .error-msg {
+  color: red;
+  text-align: justify;
+  font-size: 0.6em;
+  line-height: 0;
+}
+.login #login-form .btn-box {
+  text-align: justify;
+}
+.login-info button {
+  border-radius: 0.5rem;
+  background-color: rgb(255, 123, 0);
+  border: 1px solid grey;
+  padding: 0.5rem;
+
+}
+
+#login-btn:hover {
+  background-color: #000;
+  color: #fff;
+  cursor: pointer;
+}
+
+.login-info .error-msg {
+  color: red;
+  text-align: justify;
+  font-size: 0.6em;
+}
+
+.login #login-form p {
   font-size: 0.6rem;
   line-height: 2rem;
 }
-  
-  .login a{
-    text-decoration: none;
-  }
+
+.login a {
+  text-decoration: none;
+}
 
 .login-img {
-    width: 30rem;
-    height: 30rem;
-    right: 0.5rem;
-  }
+  width: 25rem;
+  height: 25rem;
+  right: 0.5rem;
+}
 
-.login .login-img img{
+.login .login-img img {
   width: 100%;
   height: auto;
 }
-  
