--- a/css/signup.css
+++ b/css/signup.css
@@ -19,18 +19,19 @@ nav {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 5px 40px;
-  background-color: transparent;
+  padding-left: 0.5rem;
   z-index: 1000;
   display: flex;
   justify-content: space-between;
   align-items: center;
+
 }
 
 nav .logo img {
   width: 12rem;
   height: auto;
-  padding: 2px;
+  padding-top: 0.8rem;
+
 }
 
 nav .logo img:hover {
@@ -91,68 +92,73 @@ i {
   font-size: 1em;
   cursor: pointer;
 }
-
-.hero {
+.signup-info {
   width: 100%;
   height: 100vh;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 1rem;
 }
 
-.txt-content {
-  padding: 1rem 2rem;
+.signup-info #signup-form {
+  line-height: 3rem;
+  width: 20rem;
+  height: 30rem;
+  padding: 1rem;
   border-radius: 0.5rem;
   box-shadow: 5px 10px 18px rgb(255, 123, 0);
-  width: 30rem;
-  height: 60vh;
 }
 
-h1 {
-  font-size: 1.5rem;
+.signup-info #signup-form h1 {
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.2rem;
 }
 
-p {
+#signup-form label {
+  font-weight: 500;
   font-size: 0.8rem;
 }
-.hero .img {
+
+#signup-form input{
+  padding: 0.4rem;
+}
+
+#signup-form .error-msg {
+  color: red;
+  text-align: justify;
+  font-size: 0.6em;
+  line-height: 0;
+}
+
+.signup-info #signup-form .btn-box {
+  text-align: center;
+}
+
+button{
+  border: 1px solid grey;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  background-color: rgb(255, 123, 0);
+}
+
+button:hover{
+  background-color: #000;
+  color: white;
+  cursor: pointer;
+}
+
+.signup-info #signup-form p {
+  font-size: 0.6rem;
+}
+
+.signup-img {
   width: 40%;
-  height: auto;
+  height: 30rem;
   right: 0.5rem;
 }
 
-.hero .img img {
+.signup-info .signup-img img {
   width: 100%;
   height: auto;
-}
-
-.hero .txt-content .actions {
-  display: flex;
-  align-items: center;
-}
-
-.actions button {
-  width: 160px;
-  height: 40px;
-  margin-top: 10px;
-  margin-bottom: 5px;
-  margin-left: 10px;
-  font-size: 18px;
-  cursor: pointer;
-  transition: 0.4s ease;
-}
-
-.signup{
-border-radius: 0.5rem;
-}
-
-.login{
-  background-color: rgb(255, 123, 0);
-  border: none;
-}
-
-.actions button:hover {
-  background-color: #000;
-  color: #fff;
 }
