--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,9 @@
 body {
   font-family: "Poppins", sans-serif;
   width: 100%;
+  background-color: #f7fbff;
   height: 100vh;
 }
-
 
 nav {
   text-transform: uppercase;
@@ -19,19 +19,19 @@ nav {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 5px 40px;
-  background-color: snow;
+  padding-left: 0.5rem;
   z-index: 1000;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid black;
+
 }
 
 nav .logo img {
   width: 12rem;
   height: auto;
-  padding: 2px;
+  padding-top: 0.8rem;
+
 }
 
 nav .logo img:hover {
@@ -55,7 +55,7 @@ nav .logo img:hover {
 }
 
 .menu li a:hover {
-  color: #fff;
+  color: rgb(0, 0, 0);
   font-weight: bold;
   transition: all ease 0.2s;
 }
@@ -92,69 +92,70 @@ i {
   font-size: 1em;
   cursor: pointer;
 }
-
-.sidenav {
+.hero {
+  width: 100%;
   height: 100vh;
-  margin-top: 3.75rem;
-  width: 10rem;
-  position: fixed;
-  z-index: 1000;
-  top: 0;
-  left: 0;
-  overflow-x: hidden;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 0.5rem;
-  border: 1px solid black;
-}
-
-.sidenav a {
-  padding: 32px;
-  text-decoration: none;
-  font-size: 1rem;
-  color: black;
-  display: block;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-.main {
-  height: 100vh;
-  position: relative;
-  display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  flex-direction: column-reverse;
-}
-#question {
-  border-bottom: 1px solid #555;
   padding: 1rem;
 }
 
-#answer {
-  padding-top: 1rem;
-  color: black;
-  font-size: 12px;
-  font-weight: 400;
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  gap: 1rem;
-  max-width: 50rem;
-  margin: 0 auto;
-  display: list-item;
+.txt-content {
+  padding: 1rem 2rem;
+  border-radius: 0.5rem;
+  box-shadow: 5px 10px 18px rgb(255, 123, 0);
+  width: 30rem;
+  height: 60vh;
 }
 
-#answer-form{
+h1 {
+  font-size: 1.5rem;
+}
+
+p {
+  font-size: 1rem;
+}
+.hero .img {
+  width: 40%;
+  height: auto;
+  right: 0.5rem;
+}
+
+.hero .img img {
+  width: 100%;
+  height: auto;
+}
+
+.hero .txt-content .actions {
   display: flex;
   align-items: center;
-  flex-direction: column;
-  position: relative;
 }
 
-#answer-form h1{
-font-size: 1rem;
-text-align: left;
+.actions button {
+  width: 160px;
+  height: 40px;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  margin-left: 10px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: 0.4s ease;
+}
+
+.signup{
+border-radius: 0.5rem;
+background-color: rgb(255, 123, 0);
+border: 1px solid grey;
+
+}
+
+.login{
+  border: 1px solid grey;
+  border-radius:  0.5rem;
+}
+
+.actions button:hover {
+  background-color: #000;
+  color: #fff;
 }
