--- a/css/signup.css
+++ b/css/signup.css
@@ -162,3 +162,12 @@ button:hover{
   width: 100%;
   height: auto;
 }
+
+#preloader{
+  background: #fff url(../images/loader-gif.gif) no-repeat center;
+  background-size: 20%;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+}
