--- a/css/login.css
+++ b/css/login.css
@@ -183,3 +183,12 @@ i {
   width: 100%;
   height: auto;
 }
+
+#preloader{
+  background: #fff url(../images/loader-gif.gif) no-repeat center;
+  background-size: 20%;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+}
