--- a/css/styles.css
+++ b/css/styles.css
@@ -159,3 +159,12 @@ border: 1px solid grey;
   background-color: #000;
   color: #fff;
 }
+
+#preloader{
+  background: #fff url(../images/loader-gif.gif) no-repeat center;
+  background-size: 20%;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+}
