--- a/css/question-form.css
+++ b/css/question-form.css
@@ -18,7 +18,7 @@ nav {
   left: 0;
   width: 100%;
   padding: 5px 40px;
-  background-color: #f7fbff;
+  background-color: #ffffff;
   z-index: 1000;
   display: flex;
   justify-content: space-between;
