--- a/css/signup.css
+++ b/css/signup.css
@@ -60,38 +60,6 @@ nav .logo img:hover {
   transition: all ease 0.2s;
 }
 
-.search_box {
-  position: relative;
-  width: 65px;
-  height: 40px;
-  line-height: 2.5rem;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  transition: 0.5s;
-  border-radius: 2rem;
-  padding: 0 1rem;
-}
-
-.search_box input {
-  width: 100%;
-  height: 100%;
-  border: none;
-  outline: none;
-  color: #555;
-  font-size: 1.1rem;
-  background-color: transparent;
-}
-
-.search_box:hover {
-  background-color: white;
-  width: 500px;
-}
-
-i {
-  font-size: 1em;
-  cursor: pointer;
-}
 .signup-info {
   width: 100%;
   height: 100vh;
@@ -103,7 +71,7 @@ i {
 .signup-info #signup-form {
   line-height: 3rem;
   width: 20rem;
-  height: 30rem;
+  height: 27rem;
   padding: 1rem;
   border-radius: 0.5rem;
   box-shadow: 5px 10px 18px rgb(255, 123, 0);
@@ -153,8 +121,8 @@ button:hover{
 }
 
 .signup-img {
-  width: 40%;
-  height: 30rem;
+  width: 27rem;
+  height: 27rem;
   right: 0.5rem;
 }
 
